--- a/index.html
+++ b/index.html
@@ -502,13 +502,7 @@
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="/terms">Terms</a>
-                </li>
-                <li>
-                    <a href="/terms#privacy">Privacy</a>
-                </li>
-                <li>
-                    <a href="/contact">Contact</a>
+                    <a href="./careers/careers.html">Careers</a>
                 </li>
             </ul>
             <p class="copyright" style="font-size: 1rem;">&copy;Laven 2020. All rights reserved.</p>
