--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="./careers/careers.html">Careers</a>
+                    <a href="./careers">Careers</a>
                 </li>
             </ul>
             <p class="copyright" style="font-size: 1rem;">&copy;Laven 2020. All rights reserved.</p>
