--- a/careers.html
+++ b/careers.html
@@ -19,7 +19,7 @@
     <body id="root" class="index is-loading">
         
        <div class="inner" >
-                <a href="./index.html" style="border-bottom: 0;">
+                <a href="./" style="border-bottom: 0;">
                     <img src='./assets/images/title-logo.png' alt='laven - the exquisite merch store' style="width: 35%; margin-top: 3rem;">
                 </a>
 
@@ -80,7 +80,7 @@
             </div>
 
             <br><br>
-            <a href="./index.html" style="border-bottom: none !important;">Home</a>
+            <a href="./" style="border-bottom: none !important;">Home</a>
             <footer id="footer" style="margin-top: 0rem;">
                 <p class="copyright" style="font-size: 1rem;">&copy;Laven 2020. All rights reserved.</p>
             </footer>
