--- a/index.html
+++ b/index.html
@@ -327,12 +327,10 @@
             <section id="about" class="style1" style="margin-top: 3rem !important;">
                 <header>
                     <h2>
-                        Add title here
+                        Custom Merchandise Platform<br>for Artists
                     </h2>
                     <p>
-                       Add short pitch here
-                       <br>
-                       Add photos below
+                        Laven is a premium Indian platform that enables any influencer, artist or organisation to create and sell custom merchandise. We are helping thousands of artists reach millions of fans through their official licensed merchandise.
                     </p>
                 </header>
                 <div class="carousel">
@@ -383,9 +381,9 @@
                         </div>
                     </div>
                     <div class="content">
-                        <h2>Platform Feature 1</h2>
+                        <h2>Store Website</h2>
                         <p>
-                            description
+                            We provide an interactive website with official merchandise from influencers and artists. Get your own customised page with all your merchandise and run personalised campaigns on our website’s main page. 
                         </p>
                     </div>
                 </section>
@@ -400,8 +398,8 @@
                         </div>
                     </div>
                     <div class="content">
-                        <h2>Platform Feature App</h2>
-                        <p>description</p>
+                        <h2>App</h2>
+                        <p>We have a user friendly App with official collections from influencers and artists available both on Android and iOS devices. You will have your own section in the app with all your custom designed merchandise. </p>
                     </div>
                 </section>
                 <section>
@@ -420,9 +418,9 @@
             </section>
             <section id="pro" class="style1">
                 <header>
-                    <h2>Problems an artist can forget</h2>
+                    <h2>We will take care of the Problems!</h2>
                     <p>
-                        description
+                        Laven facilitates influencers by eradicating the hurdles between the process of having a creative idea and selling merchandise online, enabling them to concentrate on their work and leaving their merchandise related problems to us.
                     </p>
                 </header>
                 <div class="content">
@@ -434,30 +432,30 @@
                             </p>
                         </li>
                         <li>
-                            <h3>Feature</h3>
-                            <p>description</p>
+                            <h3>Manufacturing</h3>
+                            <p>We manufacture our own products through small scale producers, and cut out the middlemen wherever possible. This direct-to-consumer model allows us to create high-quality merchandise at affordable prices. </p>
                         </li>
                         <li>
                             <h3>Inventory</h3>
                             <p>
-                               description
+                                We handle inventory and storage management for you. Through our network of warehouses throughout the country we manage all the merchandise and make sure your store does not go out stock.
                             </p>
                         </li>
                         <li>
-                            <h3>Orders and Returns</h3>
+                            <h3>Logistics</h3>
                             <p>
-                                description
+                                We take full responsibility for delivering and tracking every package and make sure that the customers get updates on their delivery. We make sure that your fans get their merch on time. 
                             </p>
                         </li>
                         <li>
-                            <h3>Analytics</h3>
+                            <h3>Order Management</h3>
                             <p>
-                                description
+                                We have set up a payment gateway and we do all the processing behind the screen to provide the influencers with a one button solution to receive their profits. We ensure that every customer who applies for a return gets their money back. Customer satisfaction and ease for the influencers are our top priority.
                             </p>
                         </li>
                         <li>
-                            <h3>No Branding</h3>
-                            <p>description</p>
+                            <h3>Quality Control</h3>
+                            <p>We make sure that every product which we deliver is perfect, just the way the influencer intended it to be. We personally conduct quality checks and ensure premium and durable, quality merchandise. </p>
                         </li>
                     </ul>
                     
@@ -502,7 +500,7 @@
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="./careers">Careers</a>
+                    <a href="./careers/careers.html">Careers</a>
                 </li>
             </ul>
             <p class="copyright" style="font-size: 1rem;">&copy;Laven 2020. All rights reserved.</p>
