--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             <section id="about" class="style1" style="margin-top: 3rem !important;">
                 <header>
                     <h2>
-                        Custom Merchandise Platform<br>for Artists
+                        "Custom Merchandise Platform"<br>"  for Artists"
                     </h2>
                     <p>
                         Laven is a premium Indian platform that enables any influencer, artist or organisation to create and sell custom merchandise. We are helping thousands of artists reach millions of fans through their official licensed merchandise.
