--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             <section id="about" class="style1" style="margin-top: 3rem !important;">
                 <header>
                     <h2>
-                        Custom Merchandise Platform<br>&nbsp;for Artists
+                        Custom Merchandise Platform<br>&nbsp;for Influencers
                     </h2>
                     <p>
                         Laven is a premium Indian platform that enables any influencer, artist or organisation to create and sell custom merchandise. We are helping thousands of artists reach millions of fans through their official licensed merchandise.
@@ -411,14 +411,14 @@
                         </div>
                     </div>
                     <div class="content">
-                        <h2>Platform Feature 3</h2>
-                        <p>description</p>
+                        <h2>Custom Offline Stores</h2>
+                        <p>We also set up custom merchandise stores in events and live performances which caters to a large amount of audience interested in influencers’ and artists’ merchandise.</p>
                     </div>
                 </section>
             </section>
             <section id="pro" class="style1">
                 <header>
-                    <h2>We will take care of the Problems!</h2>
+                    <h2>We got it all covered!</h2>
                     <p>
                         Laven facilitates influencers by eradicating the hurdles between the process of having a creative idea and selling merchandise online, enabling them to concentrate on their work and leaving their merchandise related problems to us.
                     </p>
@@ -426,9 +426,9 @@
                 <div class="content">
                     <ul class="pro-features">
                         <li>
-                            <h3>Custom Stores</h3>
+                            <h3>Customised Stores</h3>
                             <p>
-                                description
+                                We provide every artist with their own custom store page on our website. Artists can personalize their own page and display all of their merchandise in this custom store.
                             </p>
                         </li>
                         <li>
@@ -500,7 +500,7 @@
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="./careers">Careers</a>
+                    <a href="./careers/careers.html">Careers</a>
                 </li>
             </ul>
             <p class="copyright" style="font-size: 1rem;">&copy;Laven 2020. All rights reserved.</p>
