--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
         <footer id="footer">
             <ul class="menu">
                 <li>
-                    <a href="/">Home</a>
+                    <a href="./">Home</a>
                 </li>
                 <li>
                     <a href="./careers">Careers</a>
