--- a/careers.html
+++ b/careers.html
@@ -19,7 +19,7 @@
         
        <div class="inner" >
                 <a href="./index.html" style="border-bottom: 0;">
-                    <!--<img src='./assets/images/title-logo.png' alt='laven - the exquisite merch store' style="width: 35%; margin-top: 3rem;">-->
+                    <img src='./assets/images/title-logo.png' alt='laven - the exquisite merch store' style="width: 35%; margin-top: 3rem;">
                 </a>
 
             <section id="about" class="style1" style="margin-top: 2rem !important;">
