--- a/careers.html
+++ b/careers.html
@@ -18,7 +18,7 @@
     <body id="root" class="index is-loading">
         
        <div class="inner" >
-                <a href="./index.html" style="border-bottom: 0;">
+                <a href="./" style="border-bottom: 0;">
                     <img src='./assets/images/title-logo.png' alt='laven - the exquisite merch store' style="width: 35%; margin-top: 3rem;">
                 </a>
 
